Populate scales